(1) Fix double typedef name bug
typedef int A;
void f(A A);

(2) Fix multi-dimensional array pointer access bug
char *argv[];
argv[0][0];

(3) Fix an intermediate code generation bug, Start new basic block after goto

 