@@ -1,3 +1,4 @@
+$2008-05-14
 (1) Fix double typedef name bug
 typedef int A;
 void f(A A);
@@ -8,4 +9,7 @@ argv[0][0];
 
 (3) Fix an intermediate code generation bug, Start new basic block after goto
 
- 
+$2008-05-16
+(1)ucl/lex.c: Fix the bug failed to recognize float constant such as 12e20
+
+(2)ucl/declchk.c: Fix the bug failed to initialize known-size array in struct
